--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -18,6 +18,20 @@
     width: 100%;
 }
 
+/* Blog Categoiries Section */
+.home-cat-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+    gap: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+    .home-cat-container {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
 /* Latest Posts Section */
 .home-posts-container {
     display: grid;
