--- a/src/css/App.css
+++ b/src/css/App.css
@@ -94,6 +94,7 @@ body {
 .web-section__item-img {
   width: 80%;
   max-width: 600px;
+  border-radius: 9px;
 }
 
 @media screen and (min-width: 768px) {
