--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -57,3 +57,36 @@
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
+
+/* Recommended Resources */
+.home-resources-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-resources-container__item {
+    margin-top: 2rem;
+}
+
+.home-resources__item-header {
+    font-weight: 600;
+    font-size: 1.6rem;
+}
+
+.home-resources__item-body {
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+@media screen and (min-width: 768px) {
+    .home-resources__item-body {
+        font-size: 1.2rem;
+    }
+
+    .home-resources__item-header {
+        font-size: 1.8rem;
+    }
+}
