Implement blog page outlines/routing.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,12 +6,17 @@
   --var-accent-dark: #5e5e5e;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: var(--var-background);
   font-family: 'Roboto', sans-serif;
   color: var(--var-primary);
   overflow-x: hidden;
   min-height: 100vh;
+  scroll-behavior: smooth;
 }
 
 /* Containers */
@@ -97,6 +102,10 @@ body {
   border-radius: 9px;
 }
 
+.blog-page {
+  min-height: 100vh;
+}
+
 @media screen and (min-width: 768px) {
   .web-section-grid {
     grid-template-columns: 1fr 1fr;
@@ -138,6 +147,10 @@ body {
   opacity: 0.9;
 }
 
+#hero {
+  scroll-margin-top: 4.5rem;
+}
+
 /* Button */
 .btn {
   color: var(--var-background);
@@ -158,7 +171,7 @@ body {
 .web-section__list {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0 0 1rem 0;
   width: 100%;
   display: grid;
 }
@@ -173,14 +186,5 @@ body {
   display: inline-block;
 }
 
-@media screen and (min-width: 768px) {
-  .web-section__list-item-icon {
-    display: none;
-  }
 
-  .web-section__list-item {
-    text-align: center;
-    font-weight: 500;
-    font-size: 1.5rem;
-  }
-}
+@media screen and (min-width: 768px) {}
