--- a/src/css/App.css
+++ b/src/css/App.css
@@ -104,6 +104,7 @@ body {
 
 .blog-page {
   min-height: 100vh;
+  width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -122,6 +123,7 @@ body {
   font-size: 2rem;
   font-weight: 700;
   margin: 0 0 1rem 0;
+  width: 100%;
 }
 
 .web-section-subheader {
@@ -182,8 +184,14 @@ body {
   text-align: left;
 }
 
-.web-section__list-item-icon {
-  display: inline-block;
+.web-section__list-icon {
+  font-size: .5rem;
+  margin-right: .2rem;
+}
+
+.web-section__list-icon-large {
+  font-size: 1rem;
+  margin-right: .2rem;
 }
 
 
