--- a/src/css/App.css
+++ b/src/css/App.css
@@ -108,6 +108,13 @@ body {
   width: 100%;
 }
 
+.blog-page__subheading {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin: 0 0 2rem 0 !important;
+  text-align: center;
+}
+
 @media screen and (min-width: 768px) {
   .web-section-grid {
     grid-template-columns: 1fr 1fr;
@@ -159,6 +166,7 @@ body {
 }
 
 #hero,
+#blogs,
 #posts {
   scroll-margin-top: 4.5rem;
 }
