--- a/src/css/PostCard.css
+++ b/src/css/PostCard.css
@@ -41,5 +41,7 @@
 .post-card-img {
     width: 100%;
     height: 200px;
-    margin-bottom: .5rem;
+    margin-bottom: .8rem;
+    border-radius: 9px;
+    object-fit: cover;
 }
