--- a/src/css/App.css
+++ b/src/css/App.css
@@ -146,6 +146,8 @@ body {
   font-size: 1.5rem;
   font-weight: 500;
   margin: 0 0 1rem 0;
+  text-align: left;
+  width: 100%;
 }
 
 .text-highlight {
