--- a/src/css/App.css
+++ b/src/css/App.css
@@ -101,6 +101,17 @@ body {
   width: 80%;
   max-width: 600px;
   border-radius: 9px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  height: 100%;
+  transition: all .3s;
+}
+
+.web-section__item-img-no-shadow {
+  box-shadow: none;
+}
+
+.web-section__item-img:hover {
+  scale: 1.01;
 }
 
 .blog-page {
@@ -213,6 +224,3 @@ body {
   font-size: 1rem;
   margin-right: .2rem;
 }
-
-
-@media screen and (min-width: 768px) {}
