--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -68,18 +68,29 @@
     align-items: center;
 }
 
+.home-resources-grid {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
 .home-resources-container__item {
     margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .home-resources__item-header {
     font-weight: 600;
     font-size: 1.6rem;
+    width: 100%;
 }
 
 .home-resources__item-body {
     font-size: 1rem;
     font-weight: 400;
+    width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -89,5 +100,11 @@
 
     .home-resources__item-header {
         font-size: 1.8rem;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .home-resources-grid {
+        grid-template-columns: 1fr;
     }
 }
