--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,7 @@
 :root {
   --var-background: #FCFCFC;
   --var-primary: #32292F;
-  --var-secondary: #c4160d;
+  --var-secondary: #F2C14E;
   --var-accent: #f2f2f2;
   --var-accent-dark: #5e5e5e;
 }
