--- a/src/css/App.css
+++ b/src/css/App.css
@@ -132,6 +132,14 @@ body {
   }
 }
 
+.web-section-body {
+  font-size: 1.2rem;
+  font-weight: 400;
+  text-align: left;
+  width: 100%;
+  margin: 0 0 1rem 0;
+}
+
 @media screen and (min-width: 1024px) {
 
   .web-section,
