--- a/src/css/Blog.css
+++ b/src/css/Blog.css
@@ -66,7 +66,7 @@
 
 .blog-body__container-p {
     font-size: 1rem;
-    font-weight: 300;
+    font-weight: 500;
     margin: 0 0 1rem 0;
     width: 100%;
 }
@@ -102,5 +102,9 @@
 
     .blog-body__container-item-header {
         font-size: 2rem;
+    }
+
+    .blog-body__container-p {
+        font-size: 1.2rem;
     }
 }
